<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/board_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="104dp"
            android:text="@string/board_settings"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.11"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/numRows"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/rows"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.207"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/board_setting" />

        <TextView
            android:id="@+id/numCol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/columns"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.208"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/numRows" />

        <Spinner
            android:id="@+id/row_spinner"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginEnd="72dp"
            android:entries="@array/numRows"
            app:layout_constraintBaseline_toBaselineOf="@id/numRows"
            app:layout_constraintEnd_toEndOf="parent" />

        <Spinner
            android:id="@+id/column_spinner"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginEnd="72dp"
            android:entries="@array/numCol"
            app:layout_constraintBaseline_toBaselineOf="@id/numCol"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="fill_parent"
            android:layout_height="75dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/logo"
            android:src="@mipmap/logo_foreground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/MinesAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/mines"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.21"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/numCol" />

        <Spinner
            android:id="@+id/mines_spinner"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginEnd="72dp"
            android:entries="@array/percentage_mines"
            app:layout_constraintBaseline_toBaselineOf="@id/MinesAmount"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/Cell_Settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="232dp"
            android:text="@string/cell_settings"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.101"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/board_setting" />

        <TextView
            android:id="@+id/covered_cell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/covered"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.222"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Cell_Settings" />

        <TextView
            android:id="@+id/Uncovered_Cell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/uncovered"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.218"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/covered_cell" />

        <TextView
            android:id="@+id/Sus_Cell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/suspected"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.217"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Uncovered_Cell" />

        <TextView
            android:id="@+id/Mine_cell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/mine"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.204"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Sus_Cell" />

        <Spinner
            android:id="@+id/covered_spinner"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginEnd="72dp"
            android:entries="@array/colorNames"
            app:layout_constraintBaseline_toBaselineOf="@id/covered_cell"
            app:layout_constraintEnd_toEndOf="parent" />

        <Spinner
            android:id="@+id/Uncovered_spinner"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginEnd="72dp"
            android:entries="@array/colorNames"
            app:layout_constraintBaseline_toBaselineOf="@id/Uncovered_Cell"
            app:layout_constraintEnd_toEndOf="parent" />

        <Spinner
            android:id="@+id/Sus_spinner"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginEnd="72dp"
            android:entries="@array/colorNames"
            app:layout_constraintBaseline_toBaselineOf="@id/Sus_Cell"
            app:layout_constraintEnd_toEndOf="parent" />

        <Spinner
            android:id="@+id/MineColor_spinner"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginEnd="72dp"
            android:entries="@array/colorNames"
            app:layout_constraintBaseline_toBaselineOf="@id/Mine_cell"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>